--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGLBuild.loader.js";
+      var loaderUrl = buildUrl + "/Lottery_WebGLBuild.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WebGLBuild.data",
-        frameworkUrl: buildUrl + "/WebGLBuild.framework.js",
-        codeUrl: buildUrl + "/WebGLBuild.wasm",
+        dataUrl: buildUrl + "/Lottery_WebGLBuild.data",
+        frameworkUrl: buildUrl + "/Lottery_WebGLBuild.framework.js",
+        codeUrl: buildUrl + "/Lottery_WebGLBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Lottery",
